syntax = "proto3";

import "common.proto";

package pb;
option go_package ="./;pb";

service GameMatch {

    rpc CS_PlayerMatchSign         ( GameMatchSign)        returns (Empty) {}//玩家匹配报名
    rpc CS_PlayerMatchSignCancel   ( GameMatchPlayerCancel)  returns (Empty) {}//玩家匹配取消报名

    rpc SC_GameMatchOptResult   ( GameMatchOptResult) returns (Empty) {}//玩家报名(匹配)失败
}

message GameMatchSign{
    int32       source_uid                      = 1;
    int32       rule_id                         = 2;
    int32       group_id                        = 3;
    string      addition                        = 4;
    repeated    GameMatchSignPlayer player_list = 5;
}

message GameMatchSignPlayer{
	int32               uid         = 1;
    map<string, int32>    weight_attr = 2;
}

message GameMatchPlayerCancel{
    int32   source_uid  = 1;
    int32   rule_id     = 2;
    int32   group_id    = 3;
}

message GameMatchOptResult{
    int32   source_uid  = 1;
    int32   group_id    = 2;
    string  msg         = 3;
    string  roomId      = 4;
    int32   code        = 5;
}
